inou/prp/tests/errors/adv_neg_bit_range.prp
/*
:name: adv_neg_bit_range
:type: error
:error: negative
*/
// A bit-select range with a negative endpoint must be a clean compile error
// (negative index / decreasing range), never a segfault. Today `b#[1..=-1]`
// aborts (Assertion `src2 >= 0` in blop.hpp shln).
// (:error: regex is a placeholder — align to the real diagnostic message.)
const b = 0ub0110_1001
const x = b#[1..=-1]
cassert(x == 0)
